CSS problems resolved. Cross not showing properly

--- a/src/style.css
+++ b/src/style.css
@@ -260,22 +260,15 @@ body {
 .filtered-element-list {
   font-size: 14px;
   cursor: pointer;
-  padding: 5px;
+  padding: 5px 5px 5px 16px;
   color: black;
   text-decoration: none;
   position: relative;
-  margin-left: 16px;
+  width: 100%;
 }
 
-.filtered-element-list:hover::before {
-  content: "";
-  position: absolute;
-  left: -200px;
-  right: -200px;
-  top: 0;
-  bottom: 0;
+.filtered-element-list:hover {
   background-color: #ffd15b;
-  z-index: -1;
 }
 
 .selected-filtered-element {
